[package]
name = "nrc404"
version = "0.1.0"
authors = ["zerochlwork@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
near-contract-standards = "4.1.1"
sha2 = "0.10.8"
near-sys = "0.2.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
